[tool.poetry]
name = "bistiming"
version = "0.5.0dev0"
description = "A logging-friendly stopwatch and profiling tool for Python."
authors = ["Ian Lin <you@example.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ianlini/bistiming"
homepage = "https://bistiming.readthedocs.io"
classifiers = [
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
six = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7"
tox = "^3.14"
coverage = "^4.5"
doc8 = "^0.8.0"
sphinx = {version = "^2.2", python = "^3.5"}
sphinx-rtd-theme = {version = "^0.4.3", python = "^3.5"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
